--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,3 +7,9 @@
         font-family: 'Courier Prime', monospace;
     }
 }
+
+@layer utilities {
+    .td-btn-primary {
+        @apply bg-red-500 hover:bg-red-400 text-white font-bold py-2 px-4 border-b-4 border-red-700 hover:border-red-500 rounded;
+    }
+}
