add Bahnschrift and fix font stack

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 @layer base {
-    html {
+    /* html {
         font-family: 'Courier Prime', monospace;
-    }
+    } */
 }
 
 @layer utilities {
