--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -6,10 +6,13 @@
     /* html {
         font-family: 'Courier Prime', monospace;
     } */
+    body {
+        @apply bg-background-100 text-text-900;
+    }
 }
 
 @layer utilities {
     .td-btn-primary {
-        @apply bg-red-500 hover:bg-red-400 text-white font-bold py-2 px-4 border-b-4 border-red-700 hover:border-red-500 rounded;
+        @apply bg-td-accent-500 hover:bg-td-accent-400 text-white font-bold py-2 px-4 border-b-4 border-td-accent-700 hover:border-td-accent-500 rounded;
     }
 }
