--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -13,6 +13,6 @@
 
 @layer utilities {
     .td-btn-primary {
-        @apply bg-td-accent hover:bg-td-secondary text-white font-bold py-2 px-4 border-b-4 border-td-accent hover:border-td-accent/50 rounded;
+        @apply bg-td-accent hover:bg-td-accent/60 text-white font-bold py-2 px-4 border-b-4 border-td-accent hover:border-td-accent/50 rounded;
     }
 }
