--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    p {
+        @apply text-gray-600 max-w-5xl mt-1 mb-3 leading-relaxed;
+    }
+
+    main {
+        @apply p-4 xl:p-8 my-4;
+    }
+
+    h2 {
+        @apply my-2 text-3xl;
+    }
+}
