--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,10 +1,48 @@
+/**
+*  COURIER font for headings (typewriter style)
+*/
+
 @font-face {
-    font-family: 'Special Elite';
-    src: url('/fonts/SpecialElite.ttf') format('truetype');
+    font-family: 'Courier Prime';
+    src: url('/fonts/CourierPrime-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Courier Prime';
+    src: url('/fonts/CourierPrime-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Courier Prime';
+    src: url('/fonts/CourierPrime-Italic.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Courier Prime';
+    src: url('/fonts/CourierPrime-BoldItalic.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
+}
+
+/**
+*  Special Elite for extravagant headings
+*/
+/* @font-face {
+    font-family: 'Special Elite';
+    src: url('/fonts/SpecialElite.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+} */
+
+/**
+*  ROBOTO CONDENSED font for body text
+*/
 @font-face {
     font-family: 'Roboto Condensed';
     src: url('/fonts/RobotoCondensed-Regular.ttf') format('truetype');
