--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@ body {
 
 /* Set Special Elite as the default font for all headings */
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Special Elite', cursive;
+    font-family: 'Courier Prime', cursive;
 }
 
 /* Bold weight for strong and b tags */
