--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@ body {
 }
 
 /* Set Special Elite as the default font for all headings */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
     font-family: 'Courier Prime', cursive;
 }
 
