--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,17 @@
 body {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: 400; /* Regular weight for body text */
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 400; /* Regular weight for body text */
 }
 
 /* Set Special Elite as the default font for all headings */
-h1, h2, h3 {
-    font-family: 'Courier Prime', cursive;
+h1,
+h2,
+h3 {
+	font-family: 'Courier Prime', cursive;
 }
 
 /* Bold weight for strong and b tags */
-strong, b {
-    font-weight: 700; 
+strong,
+b {
+	font-weight: 700;
 }
