--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,3 +1,17 @@
+@font-face {
+	font-family: 'Impact';
+	src: url('/fonts/ImpactLabel.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'ImpactReversed';
+	src: url('/fonts/ImpactLabelReversed.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
 /**
 *  COURIER font for headings (typewriter style)
 */
