Refactor styles and components for improved design and functionality
- Updated font-face definitions in fonts.css to use WOFF format and renamed font families.
- Enhanced main.css with new styles for h1 and h2 elements, including background colors and font adjustments.
- Added a new color theme document for better color management.
- Implemented SlideOverMenu component for responsive navigation.
- Modified PageHero and ScrollSection components for improved layout and styling.
- Updated TheHeader and TheFooter components to reflect new color themes and styles.
- Replaced images with new assets and updated references in index.vue.
- Updated tailwind.config.js to reflect new color palette and removed deprecated colors.

--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,13 +1,13 @@
 @font-face {
-	font-family: 'Impact';
-	src: url('/fonts/ImpactLabel.ttf') format('truetype');
+	font-family: 'ImpactLabel';
+	src: url('/fonts/ImpactLabel.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'ImpactReversed';
-	src: url('/fonts/ImpactLabelReversed.ttf') format('truetype');
+	font-family: 'InverseImpactLabel';
+	src: url('/fonts/ImpactLabelReversed.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
 }
