--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,34 @@
 body {
 	font-family: 'Roboto Condensed', sans-serif;
-	font-weight: 400; /* Regular weight for body text */
+	font-weight: 400;
+	font-size: 18px;
+	background-color: #eed8df;
 }
 
-h1,
+h1 {
+	font-family: 'InverseImpactLabel';
+	font-size: clamp(1.5rem, 4vw + 1.5rem, 3.5rem) !important;
+	color: #faf2f5;
+	background-color: #0b0507;
+	padding: 0.05em 0.1em; /* Simulate block */
+	line-height: 1.4;
+	/* box-shadow:
+	#0b0507 0.1em 0 1px 1px,
+	#0b0507 -0.1em 0 1px 1px; */
+	display: inline; /* Required for box-decoration-break */
+	box-decoration-break: clone;
+	-webkit-box-decoration-break: clone; /* Safari support */
+}
+
+h2 {
+	font-family: 'InverseImpactLabel', monospace;
+	font-size: clamp(1.5rem, 3vw + 0.5rem, 2.1rem) !important;
+}
+
+/* h1,
 h2,
 h3 {
-	font-family: 'ImpactReversed', monospace;
+	font-family: 'Impact', monospace;
 }
 
 h1 span,
@@ -17,7 +39,7 @@ h2 span {
 	box-shadow:
 		0.2em 0 0px 0px #100e09,
 		-0.2em 0 0px 0px #100e09;
-}
+} */
 
 /* Bold weight for strong and b tags */
 strong,
