--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,24 +25,12 @@ h2 {
 	font-size: clamp(1.5rem, 3vw + 0.5rem, 2.1rem) !important;
 }
 
-/* h1,
-h2,
-h3 {
-	font-family: 'Impact', monospace;
-}
-
-h1 span,
-h2 span {
-	color: #f2ede0;
-	background-color: #100e09;
-	line-height: 1.1;
-	box-shadow:
-		0.2em 0 0px 0px #100e09,
-		-0.2em 0 0px 0px #100e09;
-} */
-
 /* Bold weight for strong and b tags */
 strong,
 b {
 	font-weight: 700;
+}
+
+button {
+	border-radius: 0 !important;
 }
